--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:orientation="vertical"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.android.alces.androidclass.Register"
+    android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_height="fill_parent"
@@ -15,7 +17,7 @@
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/editText"
+            android:id="@+id/etUsernameRegister"
             android:hint="User Name"
             android:layout_weight=".5"/>
 
@@ -23,10 +25,18 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:inputType="textPassword"
-            android:id="@+id/editText2"
+            android:id="@+id/registerPasswordText"
             android:hint="Password"
-            android:layout_below="@+id/editText"
+            android:layout_below="@+id/etPasswordRegister"
             android:layout_weight=".5"/>
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/etEmailRegister"
+            android:hint="Email"
+            android:layout_weight=".5"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -36,30 +46,13 @@
         android:layout_weight=".6">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log in"
-            android:id="@+id/button"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/editText"
-            android:layout_toStartOf="@+id/editText" />
-
-        <Button
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Create Account"
             android:id="@+id/button2"
-            android:layout_alignTop="@+id/button"
+            android:layout_alignTop="@+id/btnCreateRegister"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Debug"
-            android:id="@+id/btnDebug"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
 
     </LinearLayout>
 
@@ -73,10 +66,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Messages Show Here"
-            android:id="@+id/tvLoginMessages"
-            android:layout_above="@+id/button"
-            android:layout_alignLeft="@+id/editText2"
-            android:layout_alignStart="@+id/editText2" />
+            android:id="@+id/tvRegisterMessages"/>
 
     </LinearLayout>
+
+
 </LinearLayout>
