--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -7,30 +7,19 @@
     tools:context="com.android.alces.androidclass.RoomsActivity"
     android:orientation="vertical">
 
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:layout_weight=".7">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create Room"
-            android:id="@+id/btnCreateRooms"
-            android:layout_alignTop="@+id/btnCreateRegister"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
         android:layout_weight=".1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Available Frequencies"
+            android:id="@+id/tvRoomsFrequencies"
+            android:layout_gravity="center"
+            android:textSize="24sp"/>
 
         <ListView
             android:layout_width="wrap_content"
@@ -42,6 +31,24 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:layout_weight=".7"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Frequency"
+            android:id="@+id/btnCreateRooms"
+            android:layout_alignTop="@+id/btnCreateRegister"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
