--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -5,13 +5,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.android.alces.androidclass.ActiveRoom">
+    tools:context="com.android.alces.androidclass.ActiveRoom"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="356dp"
         android:orientation="vertical"
-        android:layout_weight=".1">
+        android:weightSum="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,6 +21,40 @@
             android:id="@+id/tvRoomFrequencyName"
             android:layout_gravity="center"
             android:textSize="24sp"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="313dp"
+            android:id="@+id/active_list_users" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.10">
+
+        <Button
+            android:layout_width="142dp"
+            android:layout_height="wrap_content"
+            android:text="PTT"
+            android:id="@+id/active_button_ptt"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.63">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/active_editText_message"
+            android:hint="Send Message" />
     </LinearLayout>
 
 </LinearLayout>
