Rewired the registration activity
Made the registration activity do what it's supposed to. Instead of
using the login screen to create accounts. There are currently no
verifications on the strings the user inputs as well as no hashing on
the password. There are TODO items in the code which describe this
issue.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,9 +25,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:inputType="textPassword"
-            android:id="@+id/registerPasswordText"
+            android:id="@+id/etPasswordRegister"
             android:hint="Password"
-            android:layout_below="@+id/etPasswordRegister"
             android:layout_weight=".5"/>
 
         <EditText
@@ -49,8 +48,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Create Account"
-            android:id="@+id/button2"
-            android:layout_alignTop="@+id/btnCreateRegister"
+            android:id="@+id/btnCreateRegister"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
