--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -14,13 +14,20 @@
         android:orientation="vertical"
         android:weightSum="1">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="So and So's Frequency"
-            android:id="@+id/tvRoomFrequencyName"
-            android:layout_gravity="center"
-            android:textSize="24sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="So and So's Frequency"
+                android:id="@+id/tvRoomFrequencyName"
+                android:layout_gravity="center"
+                android:textSize="24sp"/>
+
+            <Button
+                android:layout_width="142dp"
+                android:layout_height="wrap_content"
+                android:text="Freq Settings"
+                android:id="@+id/active_button_edit"
+                android:layout_gravity="center_horizontal" />
 
         <ListView
             android:layout_width="match_parent"
