--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="..."
+            android:text=""
             android:id="@+id/tvLoginMessages"
             android:layout_above="@+id/button"
             android:layout_alignLeft="@+id/editText2"
