--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -47,6 +47,14 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refresh"
+            android:id="@+id/btnRefreshRooms"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
 
     </LinearLayout>
 
