--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -5,14 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.android.alces.androidclass.ActiveRoom"
-    android:weightSum="1">
+    tools:context="com.android.alces.androidclass.ActiveRoom">
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="356dp"
+        android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_weight="3">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -29,10 +28,25 @@
                 android:id="@+id/active_button_edit"
                 android:layout_gravity="center_horizontal" />
 
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="356dp"
+        android:orientation="vertical"
+        android:layout_weight=".1">
+
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="313dp"
-            android:id="@+id/active_list_users" />
+            android:layout_height="match_parent"
+            android:id="@+id/active_list_users"
+            android:layout_weight=".5"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/active_list_chat"
+            android:layout_weight=".5"/>
 
     </LinearLayout>
 
@@ -41,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.10">
+        android:layout_weight=".1">
 
         <Button
             android:layout_width="142dp"
@@ -56,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.63"
+        android:layout_weight="0.01"
         android:focusable="true"
         android:focusableInTouchMode="true">
 
