Design and operation changes for active room.
Active room's design changed a bit to be better for changing screen
sizes. Also put some basic logic to keep the media object working
correctly.

--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -8,43 +8,45 @@
     tools:context="com.android.alces.androidclass.ActiveRoom">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3">
+        android:layout_weight="1.8">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:text="So and So's Frequency"
                 android:id="@+id/tvRoomFrequencyName"
-                android:layout_gravity="center"
-                android:textSize="24sp"/>
+                android:textSize="24sp"
+                android:layout_weight="1"
+                android:layout_gravity="center"/>
 
             <Button
-                android:layout_width="142dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
                 android:text="Freq Settings"
                 android:id="@+id/active_button_edit"
-                android:layout_gravity="center_horizontal" />
+                android:layout_weight="1"
+                android:layout_gravity="center"/>
 
         </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="356dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight=".1">
+        android:layout_weight=".9">
 
         <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/active_list_users"
-            android:layout_weight=".5"/>
+            android:layout_weight="1"/>
 
         <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/active_list_chat"
             android:layout_weight=".5"/>
 
@@ -53,32 +55,24 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_weight=".1">
+        android:layout_weight="1.6">
 
         <Button
-            android:layout_width="142dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
             android:text="PTT"
             android:id="@+id/active_button_ptt"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.01"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/active_editText_message"
             android:hint="Send Message"
+            android:layout_weight="1"
             />
     </LinearLayout>
 
