--- a/app/src/main/res/menu/menu_register.xml
+++ b/app/src/main/res/menu/menu_register.xml
@@ -2,6 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.alces.androidclass.Register">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:title="back"
+        android:id="@+id/action_back"
+        android:icon="@drawable/ic_back"
+        app:showAsAction="always"/>
 </menu>
