--- a/app/src/main/res/menu/menu_edit_room.xml
+++ b/app/src/main/res/menu/menu_edit_room.xml
@@ -4,7 +4,7 @@
     tools:context="com.android.alces.androidclass.RoomEditActivity">
 
     <item
-        android:title="back"
+        android:title="Back"
         android:id="@+id/action_back"
         android:icon="@drawable/ic_back"
         app:showAsAction="always"/>
