--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.android.alces.androidclass.RoomsActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:orientation="vertical"
@@ -24,7 +26,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="419dp"
+        android:layout_height="432dp"
         android:orientation="vertical">
 
         <ListView
@@ -38,31 +40,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:layout_weight=".7"
-        android:gravity="center">
+        android:layout_gravity="center_horizontal">
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create Frequency"
-            android:id="@+id/btnCreateRooms"
-            android:layout_alignTop="@+id/btnCreateRegister"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Refresh"
-            android:id="@+id/btnRefreshRooms"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="dummy"
+            android:id="@+id/rooms_textView_number"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="15dp" />
     </LinearLayout>
-
 
 </LinearLayout>
