--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     tools:context=".MainActivity">
 
     <item
-        android:title="back"
+        android:title="Back"
         android:id="@+id/action_back"
         android:icon="@drawable/ic_back"
         app:showAsAction="always"/>
