--- a/app/src/main/res/menu/menu_rooms.xml
+++ b/app/src/main/res/menu/menu_rooms.xml
@@ -4,14 +4,20 @@
     tools:context="com.android.alces.androidclass.RoomsActivity">
 
     <item
-        android:title="back"
+        android:title="Back"
         android:id="@+id/action_back"
         android:icon="@drawable/ic_back"
         app:showAsAction="always"/>
 
     <item
-        android:title="refresh"
+        android:title="Refresh"
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh"
+        app:showAsAction="always"/>
+
+    <item
+        android:title="Create Frequency"
+        android:id="@+id/action_create"
+        android:icon="@drawable/ic_create"
         app:showAsAction="always"/>
 </menu>
