Style changes for the active room chat.

--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -37,13 +37,6 @@
                 android:textSize="24sp"
                 android:layout_gravity="center"/>
 
-            Button
-                android:layout_width="wrap_content"
-                android:layout_height="33dp"
-                android:text="Freq Settings"
-                android:id="@+id/active_button_edit"
-                android:layout_gravity="center"/>
-
         </LinearLayout>
 
     <LinearLayout
@@ -53,11 +46,14 @@
         android:layout_weight=".9"
         android:weightSum="1">
 
-        <ListView
+        <GridView
             android:layout_width="fill_parent"
             android:layout_height="105dp"
             android:id="@+id/active_list_users"
-            android:layout_weight="0.66" />
+            android:layout_weight="0.66"
+            android:columnWidth="100dp"
+            android:stretchMode="columnWidth"
+            android:numColumns="auto_fit"/>
 
         <ListView
             android:layout_width="fill_parent"
