Fixed hidden Send Text in ActiveRoom
Send Text is no longer covered up and PTT is hidden while text chatting

--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -68,11 +68,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1.6">
+        android:layout_weight="1.6"
+        android:focusable="false">
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:text="PTT"
             android:id="@+id/active_button_ptt"
             android:layout_gravity="center_horizontal"
@@ -80,11 +81,9 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="64dp"
             android:id="@+id/active_editText_message"
-            android:hint="Send Message"
-            android:layout_weight="1"
-            />
+            android:hint="Send Message" />
     </LinearLayout>
 
 </LinearLayout>
