--- a/app/src/main/res/layout/custom_list_chat.xml
+++ b/app/src/main/res/layout/custom_list_chat.xml
@@ -4,9 +4,13 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:background="#ffffff">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
