--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#32ffffff">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp">
     <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Text"
         android:id="@+id/tvCustomListName"
         android:layout_weight="1"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:layout_marginLeft="15dp" />
 
     <TextView
         android:layout_width="0dp"
