--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -7,8 +7,7 @@
     tools:context="com.android.alces.androidclass.ActiveRoom"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    android:background="@drawable/bg_active"
-    android:backgroundTint="#b4dfda">
+    android:background="@drawable/bg_active">
 
     <LinearLayout
         android:orientation="vertical"
