--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    android:background="@drawable/bg_rooms"
-    android:backgroundTint="#b4dfda">
+    android:background="@drawable/bg_rooms">
 
     <LinearLayout
         android:orientation="vertical"
