--- a/app/src/main/res/layout/activity_active_room.xml
+++ b/app/src/main/res/layout/activity_active_room.xml
@@ -46,18 +46,15 @@
         android:layout_weight=".9"
         android:weightSum="1">
 
-        <GridView
+        <ListView
             android:layout_width="fill_parent"
-            android:layout_height="105dp"
+            android:layout_height="fill_parent"
             android:id="@+id/active_list_users"
-            android:layout_weight="0.66"
-            android:columnWidth="100dp"
-            android:stretchMode="columnWidth"
-            android:numColumns="auto_fit"/>
+            android:layout_weight="0.66"/>
 
         <ListView
             android:layout_width="fill_parent"
-            android:layout_height="119dp"
+            android:layout_height="fill_parent"
             android:id="@+id/active_list_chat"
             android:layout_weight="0.41" />
 
